--- a/_config.yml
+++ b/_config.yml
@@ -102,5 +102,5 @@ theme: butterfly
 ## Docs: https://hexo.io/docs/one-command-deployment
 deploy:
   - type: git
-    repository:
-      github: https://{$ACTION_DEPLOY_KEY}@github.com/Bliod-Cook/bliod-cook.github.io.git,main
+    repo: https://github.com/Bliod-Cook/bliod-cook.github.io.git,main
+    token: $ACTION_DEPLOY_KEY
