--- a/_config.yml
+++ b/_config.yml
@@ -102,6 +102,6 @@ theme: butterfly
 ## Docs: https://hexo.io/docs/one-command-deployment
 deploy:
   type: git
-  repo: https://github.com/Bliod-Cook/bliod-cook.github.io.git
+  repo: https://github.com/Bliod-Cook/bliod-cook.github.io
   branch: main
   token: $ACTION_DEPLOY_KEY
