--- a/_config.yml
+++ b/_config.yml
@@ -101,7 +101,7 @@ theme: butterfly
 # Deployment
 ## Docs: https://hexo.io/docs/one-command-deployment
 deploy:
-  type: git
-  repo: https://github.com/Bliod-Cook/bliod-cook.github.io
-  branch: main
-  token: $ACTION_DEPLOY_KEY
+  - type: git
+    repo: https://github.com/Bliod-Cook/bliod-cook.github.io
+    branch: main
+    token: $ACTION_DEPLOY_KEY
