--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,4 +29,5 @@ jobs:
           npm install hexo-deployer-git --save
           npm install
           hexo clean
+          hexo g
           hexo deploy
